<resources>
    <string name="app_name">Daily Zekr</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Golbarg.net</string>
    <string name="nav_header_subtitle">contact@golbarg.net</string>
    <string name="nav_header_desc">Daily Zekr</string>
    <string name="menu_home">Home</string>
    <string name="menu_zekrs">Zekrs</string>
    <string name="menu_zekr_counter">Zekr Counter</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="about_page_description" translatable="false">We are an innovative computer code development company that provides top-rated computer code Development Services because of our huge expertise, a team of masterful professionals, key business insights, and a fanatical operating method.</string>
    <string name="today_zekr">Today Zekr</string>
    <string name="today_zekr_img">Today Zekr</string>
    <string name="set_today_zekr">Set Today Zekr Image</string>
    <string name="toggle_image_service">Enable Daily Zekr Image Service</string>
    <string name="toggle_image_service_details">You can Enable or Disable the Background Image Changer Service on Your Phone Just by Changing the Above Option.</string>
    <string name="back_img_service_started">Image Change Service Started</string>
    <string name="back_img_service_stopped">Image Change Service Stopped</string>
    <string name="count">COUNT</string>
    <string name="reset">RESET</string>
    <string name="zekr_number" translatable="false">0000</string>
    <string name="reset_counter">Reset Counter</string>
    <string name="reset_counter_message">Are you sure to Reset Counter?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="toggle_quote_notification">Enable/Disable Quotes notification</string>
    <string name="toggle_quote_notification_details">You can Enable or Disable to show the Quote Notification when App Started or Changed Background Image</string>
    <string name="notification_enabled">Notification Enabled</string>
    <string name="notification_disabled">Notification Disabled</string>
    <string name="menu_quote">Islamic Quote</string>
    <string name="today_name">Today Name</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="language">Language</string>
</resources>