<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ellia.dailyzekr.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_zekr_counter"
        android:name="com.ellia.dailyzekr.ui.zekrcounter.ZekrCounterFragment"
        android:label="@string/menu_zekr_counter"
        tools:layout="@layout/fragment_zekr_counter" />


    <fragment
        android:id="@+id/nav_setting"
        android:name="com.ellia.dailyzekr.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.ellia.dailyzekr.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>